# 4k-stereo-synthesis-lab

./: .gitignore  README.md  install-cuda_standalone0.bat  pyproject.toml  requirements-cuda0.txt  requirements-cuda13-nightly-extra.txt  requirements-cuda13-nightly.txt  requirements-risky.txt  requirements.txt  run_windows.bat  update_windows.bat
docs/: 00-api-handoff-progress.md  01-desktop2stereo-engineering-design-specification.md  06-api-handoff-progress.md  08-synthesis-optimization-log-2026-06-16.md  09-api-handoff-progress.md  09-handoff-2026-06-16.md  10-rtx3090-fused-synthesis-results.md  12-openxr-stereo-runtime-plan.md  13-realtime-stereo-parameter-guide.md  14-host-api-preset-examples.md  15-host-api-contract.md  16-depth-py-migration-map.md  17-multiplatform-provider-layout.md  19-capture-architecture-flow.md  24-openxr-render-path-report.md  25-2d-to-3d-runtime-specification.md  26-desktop2stereo-engineering-design-specification.md  27-vr-headset-focal-distance-reference.md  28-Realtime-2d-to-3d-specification.md  29-i18n-implementation-plan.md  30-jiggly-doodling-blum.md  31-directml-fallback-and-d3d11-d3d12-bridge-survey.md  32-macos-zero-copy-capture-inference-survey.md  33-quality-buffered-output-feasibility-report.md  34-visiondepth3d-comparison-and-offline-workflow-report.md  README.md  prompt.txt
prompts/: codex-refactor-prompt.md
scripts/: auto_mode_runtime_demo.py  batch_generate_depth_maps.py  bench_4k.py  bench_depth_backends.py  bench_end_to_end_4k.py  build_native_tensorrt_engine.py  check_native_tensorrt_consistency.py  compare_methods.py  (+18 more)
(+254 files in other folders)
